@startuml CBT_System_ERD
!theme plain
skinparam backgroundColor white
skinparam defaultFontSize 11

' Entity styling
skinparam class {
  BackgroundColor #E3F2FD
  BorderColor #1976D2
  ArrowColor #1976D2
}

title Entity Relationship Diagram - CBT System

entity "User" as user {
  * **id** : String <<PK>>
  --
  * nama : String
  * email : String <<unique>>
  * password : String
  tempatLahir : String
  * jenisKelamin : Gender
  * role : Role
  * createdAt : DateTime
  * updatedAt : DateTime
}

entity "Exam" as exam {
  * **id** : String <<PK>>
  --
  * userId : String <<FK>>
  * title : String
  * subject : String
  * duration : Int (minutes)
  * passingScore : Int
  startDate : DateTime
  endDate : DateTime
  status : String
  * createdAt : DateTime
  * updatedAt : DateTime
}

entity "Question" as question {
  * **id** : String <<PK>>
  --
  * examId : String <<FK>>
  * questionText : String
  * optionA : String
  * optionB : String
  * optionC : String
  * optionD : String
  * correctAnswer : String
  * difficultyLevel : String
  questionOrder : Int
  * createdAt : DateTime
  * updatedAt : DateTime
}

entity "ExamResult" as examResult {
  * **id** : String <<PK>>
  --
  * examId : String <<FK>>
  * userId : String <<FK>>
  * score : Int
  startTime : DateTime
  endTime : DateTime
  * status : String
  isPassed : Boolean
  * createdAt : DateTime
  * updatedAt : DateTime
}

entity "Answer" as answer {
  * **id** : String <<PK>>
  --
  * examResultId : String <<FK>>
  * questionId : String <<FK>>
  * selectedAnswer : String
  * isCorrect : Boolean
  * createdAt : DateTime
}

' Relationships
user ||--o{ exam : "creates\n(Admin)"
user ||--o{ examResult : "takes\n(Peserta)"

exam ||--o{ question : "has"
exam ||--o{ examResult : "generates"

examResult ||--o{ answer : "contains"

question ||--o{ answer : "answered in"

' Notes
note right of user
  **Enum: Gender**
  - Laki_Laki
  - Perempuan
  
  **Enum: Role**
  - ADMIN
  - PESERTA
end note

note right of question
  **Difficulty Levels:**
  - Sangat Mudah
  - Mudah
  - Sedang
  - Sulit
  - Sangat Sulit
end note

note bottom of examResult
  **Status Values:**
  - IN_PROGRESS
  - COMPLETED
  - ABANDONED
  
  **Passing Logic:**
  isPassed = (score >= exam.passingScore)
end note

note bottom of answer
  **Validation:**
  isCorrect = (selectedAnswer == question.correctAnswer)
  
  Answers are validated in real-time
  and used for score calculation
end note

' Legend
legend right
  **Relationships:**
  ||--o{ : One-to-Many
  PK : Primary Key
  FK : Foreign Key
  
  **Cascade Delete:**
  - Delete Exam → Delete Questions
  - Delete Exam → Delete ExamResults
  - Delete ExamResult → Delete Answers
  - Delete User → Delete Exams (Admin)
  - Delete User → Delete ExamResults (Peserta)
endlegend

@enduml
